--- a/reddit-clone/Gemfile
+++ b/reddit-clone/Gemfile
@@ -32,3 +32,5 @@ gem 'devise', '~> 4.2'
 gem 'bootstrap-sass', '~> 3.3', '>= 3.3.6'
 gem 'jquery-rails'
 gem 'acts_as_votable', '~> 0.10.0'
+gem 'simple_form', '~> 3.5'
+gem 'record_tag_helper', '~> 1.0'
